# squonk2-desc-rdkit

./: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  pyproject.toml
data-manager/: jobs.yaml
src/: descriptor_generator.py  fp_morgan.py  fp_rdkit.py  main.py  rdkit_descriptors.py  rdkit_utils.py  utils.py
