[tool.poetry]
name = "squonk2-desc-rdkit"
version = "0.1.0"
description = "Calculate RDkit descriptors and fingerprints"
authors = [
  "Tim Dudgeon <tdudgeon@informaticsmatters.com>",
  "Kalev Takkis <ktakkis@informaticsmatters.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
im-data-manager-job-utilities = ">=1.2.0"
im-standardize-molecule = ">=0.1.0"
# mordredcommunity = ">=2.0.6"
# rdkit = ">=2025.3.6"
# something's wrong here, it cannot find a newer version??
rdkit = "^2025.9.1"


[tool.poetry.group.dev.dependencies]
im-jote = "^0.11.2"
pre-commit = "^3"
pylint = "^3"
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
